# ZTM_core

./: .gitlab-ci.yml  CMakeLists.txt  main.cpp  setup.py
include/: KDSection.h  LLSection.h  PRSection.h  ScheduleManager.h  Section.h  TYSection.h  TransparentSection.h  WKSection.h  ZASection.h
include/schema/: Course.h  DayType.h  Departure.h  Line.h  Stop.h  StopGroup.h
src/: KDSection.cpp  LLSection.cpp  PRSection.cpp  ScheduleManager.cpp  Section.cpp  TYSection.cpp  WKSection.cpp  ZASection.cpp
tests/: test.cpp
